Added my image and bio. Renamed Aidens image and converted it to a png. Put all images in the seperate folder. Fixed paths to images to properly display images.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>My name is Aidan Lucas</title>
-</head>
-<body>
-	<p>My name is Aidan</p>
-	<img src="281dda69c449042fd8e1248790527d60.jpg" alt="Have a Togepi"/>
-</body>
+	<head>
+		<title>My name is Aidan Lucas</title>
+	</head>
+	<body>
+		<p>My name is Aidan</p>
+		<img src="images\AidensPhoto.png" alt="Have a Togepi"/>
+
+		<p>My name is Mathew. I am awesome!</p>
+		<img src="images\Mat.png" alt="This is Mat">
+	</body>
 </html>
