Linked the css to the html and added css to the p tag.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>My name is Aidan Lucas</title>
+		<link rel="stylesheet" type="text/css" href="main.css" />
 	</head>
 	<body>
 		<p>My name is Aidan</p>
