I added my image and bio

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<img src="images\AidensPhoto.png" alt="Have a Togepi"/>
 
 		<p>My name is Mathew. I am awesome!</p>
-		<img src="images\Mat.png" alt="This is Mat">
+		<img src="images\Mat.png" alt="This is Mat" />
+
+		<p>My name is Harry.</p>
+		<img src="images\harryImage.png" alt="Harry goes here" />
 	</body>
 </html>
