--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="main.css" />
 	</head>
 	<body>
-		<p>My name is Aidan</p>
+		<p>My name is Aidan, I'm the coolest!</p>
 		<img src="images\AidensPhoto.png" alt="Have a Togepi"/>
 
 		<p>My name is Mathew. I am awesome!</p>
